bk_ida/gccida/c0/allocate_reg_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/regclass.c:2677:7: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
free( reg_pref_0); 
      ^~~~~~~~~~
      reg_pref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/regclass.c:2734:6: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
if ( reg_pref_0 ) 
     ^~~~~~~~~~
     reg_pref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/regclass.c:2735:1: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
reg_pref_0 = reg_pref_buffer; 
^~~~~~~~~~
reg_pref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_reg_info/src/obj/regclass.o] Error 1
